--- a/exercises/exercise_10/10b/index.html
+++ b/exercises/exercise_10/10b/index.html
@@ -12,8 +12,8 @@
 
     
     <script src="main.js"></script>
-    <script src="../../examples/lib/webgl-utils.js"></script>
-    <script src="../../examples/lib/webgl-debug.js"></script>
-    <script src="../../examples/lib/cuon-utils.js"></script>
+    <script src="../../../examples/lib/webgl-utils.js"></script>
+    <script src="../../../examples/lib/webgl-debug.js"></script>
+    <script src="../../../examples/lib/cuon-utils.js"></script>
 </body>
 </html>
